@@ -203,8 +203,17 @@ sub new_datablock
 {
     my( $dataname ) = @_;
 
+    die 'data block name can not be empty' if !$dataname;
+
+    my $dataname_now = $dataname;
+    $dataname_now =~ s/[ \t\r\n]/_/g;
+    if( $dataname ne $dataname_now ) {
+        warn "data block name '$dataname' was renamed to " .
+             "'$dataname_now' as data block names can not contain spaces";
+    }
+
     return {
-        name   => $dataname,
+        name   => $dataname_now,
         tags   => [],
         values => {},
         types  => {},
