@@ -1,0 +1,3 @@
+-:: WARNING, data block name ' ' was renamed to '_' as data block names can not contain spaces at <script_name> line <line_no>.
+-:: WARNING, data block name 'multi&#10;line&#10;name' was renamed to 'multi_line_name' as data block names can not contain spaces at <script_name> line <line_no>.
+data block name can not be empty at <script_name> line <line_no>.
